--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@radix-ui/react-toggle": "1.1.0",
     "@radix-ui/react-toggle-group": "1.1.0",
     "@radix-ui/react-tooltip": "1.1.3",
+    "@supabase/supabase-js": "^2.56.0",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
@@ -71,19 +72,19 @@
     "zod": "3.25.67"
   },
   "devDependencies": {
+    "@commitlint/cli": "19.6.0",
+    "@commitlint/config-conventional": "19.6.0",
+    "@cyclonedx/cdxgen": "^11.6.0",
+    "@eslint/js": "9.17.0",
     "@tailwindcss/postcss": "4.1.9",
     "@types/node": "22.10.2",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "eslint": "9.17.0",
     "eslint-config-next": "15.2.4",
-    "@eslint/js": "9.17.0",
     "eslint-plugin-security": "3.0.1",
-    "@cyclonedx/cdxgen": "^11.6.0",
     "husky": "9.1.7",
     "lint-staged": "15.2.11",
-    "@commitlint/cli": "19.6.0",
-    "@commitlint/config-conventional": "19.6.0",
     "postcss": "8.5.1",
     "tailwindcss": "4.1.9",
     "tw-animate-css": "1.3.3",
