🚀 Production-Ready Waitlist API
✅ Optimized API Implementation:
- Simplified /api/waitlist endpoint with proper error handling
- Conditional Supabase client creation (fixes build issues)
- Idempotent signup behavior (duplicates treated as success)
- Email validation with regex pattern

✅ Production Schema:
- Clean waitlist_signups table with UUID primary key
- RLS enabled with proper policies for anon/authenticated users
- Multi-tenant ready with optional org_id field
- Automatic timestamps with created_at

✅ Environment Variables:
- Updated to use SUPABASE_URL and SUPABASE_SERVICE_ROLE
- Graceful degradation when env vars not configured
- Build-time compatibility without requiring secrets

✅ Frontend Integration:
- Updated coming-soon page to use new API format
- Proper response handling for { ok: true } format
- Removed UTM tracking for simplified implementation

Files:
- app/api/waitlist/route.ts (optimized)
- supabase/schema.sql (production-ready)
- app/coming-soon/page.tsx (updated integration)
- SUPABASE_SETUP.md (updated docs)
- Removed lib/supabase-waitlist.ts (no longer needed)

✅ Build Status: Passing ✅

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sbom:xml": "cdxgen -t xml -o sbom.xml .",
     "prepare": "husky install",
     "commit": "git-cz",
+    "english:scan": "node scripts/english-scan.js \"app/**/*.{ts,tsx,md,mdx}\" \"components/**/*.{ts,tsx,md,mdx}\" \"lib/**/*.{ts,tsx}\" \"content/**/*.{md,mdx}\"",
     "security:setup": "./scripts/setup-security.sh",
     "security:validate": "./scripts/validate-security.sh",
     "security:full": "pnpm run audit && pnpm run lint:security && pnpm run sbom"
@@ -83,11 +84,16 @@
     "eslint": "9.17.0",
     "eslint-config-next": "15.2.4",
     "eslint-plugin-security": "3.0.1",
+    "glob": "^11.0.0",
     "husky": "9.1.7",
     "lint-staged": "15.2.11",
+    "next-sitemap": "^4.2.3",
     "postcss": "8.5.1",
     "tailwindcss": "4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "5.7.2"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,md,mdx,json}": ["node scripts/english-scan.js"]
   }
 }
