--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "sbom:xml": "cdxgen -t xml -o sbom.xml .",
     "prepare": "husky install",
     "commit": "git-cz",
-    "english:scan": "node scripts/english-scan.js \"app/**/*.{ts,tsx,md,mdx}\" \"components/**/*.{ts,tsx,md,mdx}\" \"lib/**/*.{ts,tsx}\" \"content/**/*.{md,mdx}\"",
+    "english:scan": "node scripts/english-scan.js \"content/**/*.{md,mdx}\"",
     "security:setup": "./scripts/setup-security.sh",
     "security:validate": "./scripts/validate-security.sh",
     "security:full": "pnpm run audit && pnpm run lint:security && pnpm run sbom"
@@ -57,6 +57,7 @@
     "embla-carousel-react": "8.5.1",
     "geist": "1.3.1",
     "input-otp": "1.4.1",
+    "jszip": "^3.10.1",
     "lucide-react": "0.454.0",
     "next": "15.2.4",
     "next-themes": "0.4.4",
@@ -78,6 +79,7 @@
     "@cyclonedx/cdxgen": "^11.6.0",
     "@eslint/js": "9.17.0",
     "@tailwindcss/postcss": "4.1.9",
+    "@types/jszip": "^3.4.1",
     "@types/node": "22.10.2",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
@@ -94,6 +96,8 @@
     "typescript": "5.7.2"
   },
   "lint-staged": {
-    "*.{ts,tsx,md,mdx,json}": ["node scripts/english-scan.js"]
+    "content/**/*.{md,mdx}": [
+      "node scripts/english-scan.js"
+    ]
   }
 }
