🚀 Complete Coming Soon System Implementation
✅ Dual Control System:
- ENV toggle: COMING_SOON=true (permanent)
- Runtime toggle: /api/toggle-coming-soon (admin-controlled)

✅ Authentication System:
- lib/auth.ts: Session management with cookie-based roles
- /api/admin-login: Simple admin authentication
- Cookie-based admin detection (pf_role=admin)

✅ Middleware Logic:
- Preserves existing English-only routing
- Preserves existing gated routes functionality
- Adds coming-soon redirect for public users
- Admin bypass: pf_role=admin cookie allows full access
- Security headers maintained

✅ Admin Panel:
- /admin: Login interface and coming-soon toggle
- Real-time status display (ENV vs Cookie vs Active)
- One-click enable/disable without redeploy

✅ Public Experience:
- Non-admin users → automatic redirect to /coming-soon
- Clean waitlist capture with Supabase integration
- Preserves 'from' parameter for analytics

✅ Production Ready:
- Build passing ✅
- All routes functional
- Security maintained
- Zero downtime toggles

Usage:
1. Set COMING_SOON=true in Vercel for permanent mode
2. Or use /admin panel for runtime control
3. Admin login: password in ADMIN_PASSWORD env var

--- a/cursor/ruleset.yml
+++ b/cursor/ruleset.yml
@@ -1,6 +1,7 @@
 project: PROMPTFORGE_v3
 semver: 1.0.0
 is_ssot: true
+X-PF-Ruleset-Version: 1.0.0
 
 policies:
   ui_cannot_override_defaults: true
