--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "security:setup": "./scripts/setup-security.sh",
     "security:validate": "./scripts/validate-security.sh",
     "security:full": "pnpm run audit && pnpm run lint:security && pnpm run sbom",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:api": "jest tests/api/",
     "test:overlay-policy": "node scripts/test-overlay-policy.js",
     "test:e2e": "playwright test",
     "test:e2e:glitch": "playwright test tests/e2e/glitch-protocol.spec.ts",
@@ -65,6 +69,7 @@
     "jszip": "^3.10.1",
     "lucide-react": "0.454.0",
     "next": "15.2.4",
+    "next-auth": "^4.24.11",
     "next-themes": "0.4.4",
     "react": "19.0.0",
     "react-day-picker": "9.4.4",
@@ -73,6 +78,7 @@
     "react-resizable-panels": "2.1.7",
     "recharts": "2.15.0",
     "sonner": "1.7.1",
+    "stripe": "^18.4.0",
     "tailwind-merge": "2.5.5",
     "tailwindcss-animate": "1.0.7",
     "vaul": "1.1.1",
