--- a/package.json
+++ b/package.json
@@ -58,19 +58,24 @@
     "@radix-ui/react-toggle-group": "1.1.0",
     "@radix-ui/react-tooltip": "1.1.3",
     "@supabase/supabase-js": "^2.56.0",
+    "@types/js-yaml": "^4.0.9",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.0.4",
+    "crypto-js": "^4.2.0",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "1.3.1",
     "input-otp": "1.4.1",
+    "js-yaml": "^4.1.0",
     "jszip": "^3.10.1",
     "lucide-react": "0.454.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "0.4.4",
+    "openai": "^5.15.0",
+    "pdf-lib": "^1.17.1",
     "react": "19.0.0",
     "react-day-picker": "9.4.4",
     "react-dom": "19.0.0",
