--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "embla-carousel-react": "8.5.1",
     "geist": "1.3.1",
     "input-otp": "1.4.1",
+    "isomorphic-dompurify": "^2.26.0",
     "js-yaml": "^4.1.0",
     "jszip": "^3.10.1",
     "lucide-react": "0.454.0",
