--- a/ruleset.yml
+++ b/ruleset.yml
@@ -12,6 +12,23 @@ policies:
   security:
     knowledge_scoping_tag: safe_to_use
     pii_public_export: anonymize
+    agents_enabled: true
+    live_test_enabled: true
+    tool_allowlist:
+      http: ["api.openai.com", "api.anthropic.com", "api.groq.com"]
+      storage: ["supabase.storage"]
+      internal_apis: ["/api/gpt-editor", "/api/gpt-test", "/api/export", "/api/run"]
+    sandbox:
+      enabled: true
+      network: "allowlist"
+      fs_scope: "/tmp/agents"
+      cpu_ms_limit: 120000
+      mem_mb_limit: 512
+      timeout_ms: 20000
+    budgets:
+      tokens_max: 12000
+      requests_per_min: 60
+      cost_usd_max_run: 1.5
   telemetry:
     do_not_log_raw_client_content: true
 
@@ -66,9 +83,28 @@ sevenD:
     architecture:{ scale: corporate,     urgency: planned, complexity: advanced, resources: full_stack_org, application: strategy_design, output_format: spec }
     agriculture: { scale: smb,           urgency: planned, complexity: standard, resources: lean_team,      application: implementation,  output_format: spec }
 
+api:
+  rate_limit:
+    editor: { rpm: 60 }
+    test: { rpm: 30, per_org: true }
+    export: { rpm: 20, per_org: true }
+  required_headers:
+    - "x-org-id"
+    - "x-run-id"
+  cors:
+    origins: ["https://chatgpt-prompting.com", "https://promptforge.app"]
+    methods: ["GET", "POST", "OPTIONS"]
+    headers: ["content-type", "authorization", "x-org-id", "x-run-id"]
+
 prompt_standard:
   sections: [ROLE_GOAL, CONTEXT_7D, OUTPUT_SPEC, PROCESS, GUARDRAILS, EVALUATION_HOOKS, TELEMETRY_KEYS]
   non_deletable_in_ui: true
+  guardrails_global:
+    - "Nu executa cod în afara sandboxului permis."
+    - "Nu accesa URL-uri în afara allowlist-ului."
+    - "Nu citi sau trimite secrete/PII. Maschează tot în logs."
+    - "Dacă scorul < 80, oprește exportul."
+  structure_required: [ROLE_GOAL, CONTEXT_7D, OUTPUT_SPEC, PROCESS, GUARDRAILS, EVAL_HOOKS, TELEMETRY]
   output_spec_contract:
     must_define_fields: [format, fields, example]
     example_minimal:
