--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@radix-ui/react-toggle": "1.1.0",
     "@radix-ui/react-toggle-group": "1.1.0",
     "@radix-ui/react-tooltip": "1.1.3",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.56.0",
     "@types/js-yaml": "^4.0.9",
     "autoprefixer": "10.4.20",
