--- a/env.example
+++ b/env.example
@@ -8,6 +8,10 @@ SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your_anon_key_here
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 
+# Client-side Supabase configuration (for authentication)
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
+
 # =============================================================================
 # VERCEL DEPLOYMENT (for CI/CD workflows)
 # =============================================================================
