--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "quality-check": "pnpm lint && pnpm type-check",
     "lint:security": "eslint . --ext .js,.jsx,.ts,.tsx --config .eslintrc.security.js",
     "lint:overlay-policy": "eslint . -c .eslintrc.overlay-policy.js",
     "start": "next start",
@@ -96,16 +100,20 @@
     "@commitlint/config-conventional": "19.6.0",
     "@cyclonedx/cdxgen": "^11.6.0",
     "@eslint/js": "9.17.0",
+    "@next/eslint-plugin-next": "^15.5.0",
     "@playwright/test": "^1.55.0",
     "@tailwindcss/postcss": "4.1.9",
     "@types/jszip": "^3.4.1",
     "@types/node": "22.10.2",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
     "eslint": "9.17.0",
     "eslint-config-next": "15.2.4",
     "eslint-plugin-security": "3.0.1",
     "glob": "^11.0.0",
+    "globals": "^16.3.0",
     "husky": "9.1.7",
     "lint-staged": "15.2.11",
     "next-sitemap": "^4.2.3",
