--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "pnpm run check:voice-branding:build && next build",
+    "build": "pnpm run check:voice-branding:build && NEXT_SKIP_API_ROUTES=true next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
