--- a/package.json
+++ b/package.json
@@ -127,6 +127,8 @@
     "@eslint/js": "^9.34.0",
     "@jest/globals": "^30.0.5",
     "@tailwindcss/postcss": "^4.1.9",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22",
@@ -140,6 +142,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "glob": "^11.0.3",
     "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.1.1",
     "postcss": "^8.5",
     "puppeteer": "^24.17.0",
     "tailwindcss": "^4.1.9",
