--- a/.github/workflows/layout-testing.yml
+++ b/.github/workflows/layout-testing.yml
@@ -9,6 +9,8 @@ on:
       - 'components/footer.tsx'
       - 'app/**/layout.tsx'
       - '__tests__/**'
+      - 'tests/e2e/**'
+      - 'playwright.config.ts'
       - 'jest.config.js'
       - 'jest.setup.js'
       - 'package.json'
@@ -20,6 +22,8 @@ on:
       - 'components/footer.tsx'
       - 'app/**/layout.tsx'
       - '__tests__/**'
+      - 'tests/e2e/**'
+      - 'playwright.config.ts'
       - 'jest.config.js'
       - 'jest.setup.js'
       - 'package.json'
@@ -144,9 +148,52 @@ jobs:
           coverage/
           .jest/
           
-  security-scan:
+  test-e2e-layout:
     runs-on: ubuntu-latest
     needs: test-layout
+    
+    strategy:
+      matrix:
+        browser: [chromium, firefox, webkit]
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Use Node.js 20.x
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+        cache: 'npm'
+        
+    - name: Install dependencies
+      run: npm ci
+      
+    - name: Install Playwright browsers
+      run: npx playwright install --with-deps ${{ matrix.browser }}
+      
+    - name: Run E2E layout consistency tests
+      run: npx playwright test tests/e2e/layout-consistency.spec.ts --project=${{ matrix.browser }}
+      env:
+        CI: true
+        
+    - name: Upload Playwright report
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: playwright-report-${{ matrix.browser }}
+        path: playwright-report/
+        
+    - name: Upload Playwright test results
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: test-results-e2e-${{ matrix.browser }}
+        path: test-results/
+        
+  security-scan:
+    runs-on: ubuntu-latest
+    needs: [test-layout, test-e2e-layout]
     
     steps:
     - name: Checkout code
