--- a/package.json
+++ b/package.json
@@ -60,6 +60,19 @@
     "test:unit": "jest",
     "test:unit:watch": "jest --watch",
     "test:unit:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:all": "pnpm test:unit && pnpm test:e2e",
+    "test:backup": "node scripts/supabase-backup.js list || echo 'No backups found (expected in CI)'",
+    "test:pii": "node scripts/intelligent-pii-scan.js --ci",
+    "test:secrets": "node scripts/enhanced-pii-report.js --format=json --ci",
+    "test:database-drift": "node scripts/check-config.js --ci",
+    "test:ci": "pnpm lint && pnpm type-check && pnpm test:unit && pnpm test:e2e && pnpm test:backup && pnpm test:pii && pnpm test:secrets",
+    "test:ci:comprehensive": "node scripts/test-ci-comprehensive.js",
+    "test:ci:comprehensive:verbose": "node scripts/test-ci-comprehensive.js --verbose",
+    "test:ci:comprehensive:fail-fast": "node scripts/test-ci-comprehensive.js --fail-fast",
     "verify:fixes": "node scripts/verify-fixes.js"
   },
   "dependencies": {
@@ -126,6 +139,7 @@
   "devDependencies": {
     "@eslint/js": "^9.34.0",
     "@jest/globals": "^30.0.5",
+    "@playwright/test": "^1.55.0",
     "@tailwindcss/postcss": "^4.1.9",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
