feat: implement observability, performance monitoring, and API smoke tests - Add Sentry error tracking and performance monitoring - Implement KPI/SLA dashboard components - Add content chunking and virtual scroll optimizations - Create API smoke test infrastructure - Update environment configuration and dependencies - Optimize Next.js config for performance and security

--- a/env.example
+++ b/env.example
@@ -2,130 +2,41 @@
 # Copy this file to .env.local and fill in your actual values
 # DO NOT commit .env.local to version control
 
-# =============================================================================
-# STRIPE CONFIGURATION
-# =============================================================================
+# Database Configuration
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url_here
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
-# Stripe Secret Key (starts with sk_test_ or sk_live_)
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key_here
 
-# Stripe Webhook Secret (starts with whsec_)
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+# Stripe Configuration
+STRIPE_SECRET_KEY=your_stripe_secret_key_here
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
 
-# Stripe Publishable Key (starts with pk_test_ or pk_live_)
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+# SendGrid Configuration
+SENDGRID_API_KEY=your_sendgrid_api_key_here
+SENDGRID_FROM_EMAIL=your_verified_sender_email_here
 
-# Stripe Portal Configuration ID (optional, starts with bpc_)
-STRIPE_PORTAL_CONFIGURATION_ID=bpc_your_portal_config_id_here
+# Sentry Configuration
+NEXT_PUBLIC_SENTRY_DSN=your_sentry_dsn_here
 
-# =============================================================================
-# SUPABASE CONFIGURATION
-# =============================================================================
+# Google Analytics 4 Configuration
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 
-# Supabase Project URL (https://project-id.supabase.co)
-SUPABASE_URL=https://your-project-id.supabase.co
-
-# Supabase Service Role Key (JWT token)
-SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.your_service_role_key_here
-
-# Supabase Anonymous Key (JWT token)
-NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.your_anon_key_here
-
-# Database URL (optional, for direct database access)
-DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
-
-# =============================================================================
-# APPLICATION CONFIGURATION
-# =============================================================================
-
-# Application Base URL
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
-
-# Node Environment
+# Application Configuration
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 NODE_ENV=development
 
-# Coming Soon Mode (set to "true" to enable coming soon page)
-NEXT_PUBLIC_COMING_SOON=false
-
-# =============================================================================
-# ANALYTICS & MONITORING
-# =============================================================================
-
-# Google Analytics 4 Measurement ID
-NEXT_PUBLIC_GA4_MEASUREMENT_ID=G-XXXXXXXXXX
-
-# Google Site Verification
-GOOGLE_SITE_VERIFICATION=your_google_verification_code
-
-# Sentry DSN (optional, for error tracking)
-NEXT_PUBLIC_SENTRY_DSN=https://your_sentry_dsn_here
-
-# =============================================================================
-# EMAIL & NOTIFICATIONS
-# =============================================================================
-
-# SendGrid API Key (optional, starts with SG.)
-SENDGRID_API_KEY=SG.your_sendgrid_api_key_here
-
-# =============================================================================
-# DEVELOPMENT & DEBUGGING
-# =============================================================================
-
-# Debug Mode (optional)
-DEBUG=false
-
-# =============================================================================
-# SECURITY
-# =============================================================================
-
-# JWT Secret (for session management)
+# Security Configuration
 JWT_SECRET=your_jwt_secret_here
+ENCRYPTION_KEY=your_encryption_key_here
 
-# Encryption Key (for sensitive data)
-ENCRYPTION_KEY=your_32_character_encryption_key_here
-
-# =============================================================================
-# RATE LIMITING
-# =============================================================================
-
-# Rate Limit Window (in milliseconds)
-RATE_LIMIT_WINDOW=900000
-
-# Rate Limit Max Requests per Window
+# Rate Limiting
 RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_WINDOW_MS=900000
 
-# =============================================================================
-# BACKUP & RECOVERY
-# =============================================================================
-
-# Backup Retention Days
-BACKUP_RETENTION_DAYS=30
-
-# Maximum Backup Files
-BACKUP_MAX_FILES=100
-
-# =============================================================================
-# FEATURE FLAGS
-# =============================================================================
-
-# Enable GPT Live Testing
-NEXT_PUBLIC_ENABLE_GPT_LIVE_TESTING=true
-
-# Enable Export Features
-NEXT_PUBLIC_ENABLE_EXPORT=true
-
-# Enable Enterprise Features
-NEXT_PUBLIC_ENABLE_ENTERPRISE=true
-
-# =============================================================================
-# NOTES
-# =============================================================================
-
-# 1. Replace all placeholder values with your actual configuration
-# 2. Keep this file secure and never commit it to version control
-# 3. Use different keys for development, staging, and production
-# 4. Regularly rotate sensitive keys and secrets
-# 5. Monitor environment variable usage in your application
-# 6. Use strong, unique values for all secrets and keys
-# 7. Consider using a secrets management service for production
-# 8. Test configuration changes in a safe environment first
+# Monitoring Configuration
+MONITORING_ENABLED=true
+ALERT_EMAIL=alerts@yourdomain.com
