--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "migrate": "node scripts/migrate.js",
     "db:setup": "node scripts/migrate.js",
     "db:seed": "node scripts/migrate.js",
+    "db:migrate": "node scripts/production-migrate.js",
+    "db:test": "node scripts/production-migrate.js --test-only",
+    "db:check": "node scripts/check-db-state.js",
+    "db:mark-complete": "node scripts/mark-migrations-complete.js",
     "setup:complete": "node scripts/setup-complete.js",
     "stripe:setup": "node scripts/setup-stripe.js",
     "sendgrid:setup": "node scripts/setup-sendgrid.js",
-    "test:all": "node scripts/test-all.js",
+    "test:all": "pnpm test:unit && pnpm test:e2e",
     "test:stripe": "curl -X POST http://localhost:3000/api/create-checkout-session",
     "test:webhook": "curl -X POST http://localhost:3000/api/webhooks/stripe",
     "test:analytics": "curl -X POST http://localhost:3000/api/analytics/track",
@@ -64,7 +68,6 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
-    "test:all": "pnpm test:unit && pnpm test:e2e",
     "test:backup": "node scripts/supabase-backup.js list || echo 'No backups found (expected in CI)'",
     "test:pii": "node scripts/intelligent-pii-scan.js --ci",
     "test:secrets": "node scripts/enhanced-pii-report.js --format=json --ci",
@@ -114,6 +117,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "dompurify": "^3.0.9",
+    "dotenv": "^17.2.1",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
@@ -122,6 +126,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "openai": "^5.15.0",
+    "pg": "^8.16.3",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
