Fix build errors and complete Stripe integration - ready for deployment

--- a/env.example
+++ b/env.example
@@ -13,9 +13,27 @@ OPENAI_API_KEY=your_openai_api_key_here
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
 # Stripe Configuration
+STRIPE_SECRET=your_stripe_secret_key_here
 STRIPE_SECRET_KEY=your_stripe_secret_key_here
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
+STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
+
+# Stripe Product IDs
+STRIPE_PILOT_PRODUCT_ID=your_pilot_product_id_here
+STRIPE_CREATOR_PRODUCT_ID=your_creator_product_id_here
+STRIPE_PRO_PRODUCT_ID=your_pro_product_id_here
+STRIPE_ENTERPRISE_PRODUCT_ID=your_enterprise_product_id_here
+
+# Stripe Price IDs for different plans
+STRIPE_PILOT_MONTHLY_PRICE_ID=your_pilot_monthly_price_id_here
+STRIPE_PILOT_ANNUAL_PRICE_ID=your_pilot_annual_price_id_here
+STRIPE_CREATOR_MONTHLY_PRICE_ID=your_creator_monthly_price_id_here
+STRIPE_CREATOR_ANNUAL_PRICE_ID=your_creator_annual_price_id_here
+STRIPE_PRO_MONTHLY_PRICE_ID=your_pro_monthly_price_id_here
+STRIPE_PRO_ANNUAL_PRICE_ID=your_pro_annual_price_id_here
+STRIPE_ENTERPRISE_MONTHLY_PRICE_ID=your_enterprise_monthly_price_id_here
+STRIPE_ENTERPRISE_ANNUAL_PRICE_ID=your_enterprise_annual_price_id_here
 
 # SendGrid Configuration
 SENDGRID_API_KEY=your_sendgrid_api_key_here
