--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,9 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "cursor/**/*",
+    "__tests__/**/*",
+    "tests/**/*"
   ]
 }
