--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "@sendgrid/mail": "^8.1.5",
     "@sentry/nextjs": "^7.100.1",
     "@stripe/stripe-js": "^7.9.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "latest",
     "@types/qrcode": "^1.5.5",
     "@upstash/redis": "^1.35.3",
@@ -151,6 +152,7 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "jsdom": "^24.0.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
