--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "dompurify": "^3.0.9",
     "dotenv": "^17.2.1",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.23.12",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "jsdom": "^24.0.0",
