chore: final cleanup and workflow updates
- Update CI/CD workflow configurations
- Final Header component accessibility improvements
- Complete TypeScript error resolution and build fixes

--- a/.github/workflows/ci-gates.yml
+++ b/.github/workflows/ci-gates.yml
@@ -150,8 +150,8 @@ jobs:
           
           # Test redirect functionality
           echo "🔄 Testing redirect functionality..."
-          curl -I http://localhost:3000/modules/risk-and-trust-reversal | grep -q "308" || {
-            echo "❌ Redirect test failed"
+          pnpm test:redirects || {
+            echo "❌ Redirect tests failed"
             exit 1
           }
           
