fix: final changes - Header accessibility and package updates

--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "test:contracts": "node scripts/test-contract-schemas.js",
     "test:redirects": "node scripts/test-redirects-e2e.js",
     "generate:redirects": "node scripts/generate-redirects.js",
-    "test:gates": "pnpm test:unit && pnpm test:contracts && pnpm test:e2e && pnpm test:redirects && pnpm test:lighthouse",
+    "test:gates": "node scripts/test-all-gates.js",
+    "test:gates:individual": "pnpm test:unit && pnpm test:contracts && pnpm test:e2e && pnpm test:redirects && pnpm test:lighthouse",
     "test:lighthouse": "lhci autorun",
     "test:lighthouse:local": "lhci autorun --collect.url=http://localhost:3000 --assert.assertions.categories:performance=0.85 --assert.assertions.categories:accessibility=0.95 --assert.assertions.categories:seo=0.90",
     "test:ci:comprehensive": "node scripts/test-ci-comprehensive.js",
