--- a/package.json
+++ b/package.json
@@ -210,6 +210,7 @@
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.1.1",
     "linkchecker": "^1.1.0",
+    "null-loader": "^4.0.1",
     "pa11y-ci": "^3.0.1",
     "postcss": "^8.5",
     "puppeteer": "^24.17.0",
