feat: update default URLs to use chatgpt-prompting.com domain
- Update NEXT_PUBLIC_APP_URL default from localhost:3000 to https://chatgpt-prompting.com
- Update env.template with correct domain for all URL configurations
- Ensure consistent domain usage across authentication, Stripe, and CORS settings

--- a/env.template
+++ b/env.template
@@ -59,19 +59,19 @@ SENDGRID_FROM_NAME=[EXAMPLE_PLACEHOLDER_YourAppName]
 
 # NextAuth Configuration
 NEXTAUTH_SECRET=[EXAMPLE_PLACEHOLDER_generate_random_32_char_string]
-NEXTAUTH_URL=[EXAMPLE_PLACEHOLDER_http://localhost:3000]
+NEXTAUTH_URL=[EXAMPLE_PLACEHOLDER_https://chatgpt-prompting.com]
 
 # =============================================================================
 # APPLICATION CONFIGURATION
 # =============================================================================
 
 # Base URL Configuration
-NEXT_PUBLIC_BASE_URL=[EXAMPLE_PLACEHOLDER_http://localhost:3000]
-NEXT_PUBLIC_APP_URL=[EXAMPLE_PLACEHOLDER_http://localhost:3000]
+NEXT_PUBLIC_BASE_URL=[EXAMPLE_PLACEHOLDER_https://chatgpt-prompting.com]
+NEXT_PUBLIC_APP_URL=[EXAMPLE_PLACEHOLDER_https://chatgpt-prompting.com]
 
 # Stripe Redirect URLs
-STRIPE_SUCCESS_URL=[EXAMPLE_PLACEHOLDER_http://localhost:3000/dashboard?success=true]
-STRIPE_CANCEL_URL=[EXAMPLE_PLACEHOLDER_http://localhost:3000/pricing?canceled=true]
+STRIPE_SUCCESS_URL=[EXAMPLE_PLACEHOLDER_https://chatgpt-prompting.com/dashboard?success=true]
+STRIPE_CANCEL_URL=[EXAMPLE_PLACEHOLDER_https://chatgpt-prompting.com/pricing?canceled=true]
 
 # =============================================================================
 # ANALYTICS CONFIGURATION
@@ -101,7 +101,7 @@ RATE_LIMIT_MAX_REQUESTS=[EXAMPLE_PLACEHOLDER_100]
 RATE_LIMIT_WINDOW_MS=[EXAMPLE_PLACEHOLDER_900000]
 
 # CORS Configuration
-CORS_ORIGIN=[EXAMPLE_PLACEHOLDER_http://localhost:3000]
+CORS_ORIGIN=[EXAMPLE_PLACEHOLDER_https://chatgpt-prompting.com]
 
 # =============================================================================
 # DEVELOPMENT OVERRIDES
