feat: update guard system and package scripts
- Update init.js to allow package.json and pnpm-lock.yaml changes
- Add guard scripts to apps/package.json
- Create GitHub Actions workflow for automated guard checks
- Rename build step from build:site-v4 to build:root

--- a/apps/package.json
+++ b/apps/package.json
@@ -6,7 +6,10 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "guard": "node -e \"require('./agent').guardedApply()\"",
+    "guard:analyze": "ANALYZE=true node -e \"require('./agent').guardedApply()\"",
+    "precommit": "pnpm run guard"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
