--- a/package.json
+++ b/package.json
@@ -201,6 +201,7 @@
     "jest-environment-jsdom": "^30.1.1",
     "linkchecker": "^1.1.0",
     "pa11y-ci": "^3.0.1",
+    "picomatch": "^4.0.3",
     "postcss": "^8.5",
     "puppeteer": "^24.17.0",
     "tailwindcss": "^4.1.9",
